# advent-of-code

./: .gitignore
2021/day01/: Cargo.toml
2022/day00/: Cargo.toml
2022/day01/: Cargo.toml
2022/day02/: Cargo.toml
2022/day03/: Cargo.toml
2022/day04/: Cargo.toml
2022/day05/: Cargo.toml
2022/day06/: Cargo.toml
2022/day07/: Cargo.toml
2022/day08/: Cargo.toml
2022/day09/: Cargo.toml
2022/day10/: Cargo.toml
2022/day11/: Cargo.toml
2022/day23/: Cargo.toml
2022/day23/src/: main.rs
2023/: Cargo.toml
2023/day00/: Cargo.toml
2023/day00/src/: main.rs
2023/day01/: Cargo.toml
2023/day01/src/: main.rs
2023/day02/: Cargo.toml
2023/day02/src/: main.rs
2023/day03/: Cargo.toml
2023/day03/src/: main.rs
2023/day04/: Cargo.toml
2023/day04/src/: main.rs
2023/day05/: Cargo.toml
2023/day05/src/: main.rs
2023/day06/: Cargo.toml
2023/day06/src/: main.rs
2023/day07/: Cargo.toml
2023/day07/src/: joker_hands.rs  main.rs  regular_hands.rs
2023/day08/: Cargo.toml
2023/day08/src/: main.rs
2023/day09/: Cargo.toml
2023/day09/src/: main.rs
2023/day10/: Cargo.toml
2023/day10/src/: main.rs
2023/day11/: Cargo.toml
2023/day11/src/: main.rs
2023/day12/: Cargo.toml
2023/day12/src/: main.rs
2023/day13/src/: main.rs
2023/day14/: Cargo.toml
2023/day14/src/: main.rs
2023/day15/: Cargo.toml
2023/day15/src/: main.rs
2023/day16/: Cargo.toml
2023/day16/src/: main.rs
2023/day17/: Cargo.toml
2023/day17/src/: main.rs
2023/day17/src/helpers/: direction.rs  dist_heap.rs  mod.rs  node.rs
2023/day18/: Cargo.toml
2023/day18/src/: main.rs
2023/day19/: Cargo.toml
2023/day19/src/: main.rs
2023/day19/src/helpers/: category.rs  mod.rs  operation.rs  part.rs  range_part.rs  workflow.rs
2023/day20/: Cargo.toml
2023/day20/src/: main.rs
2023/day21/: Cargo.toml
2023/day21/src/: main.rs
2023/day22/: Cargo.toml
2023/day22/src/: main.rs
2023/day23/: Cargo.toml
2023/day23/src/: main.rs
2023/day24/: Cargo.toml
2023/day24/src/: main.rs
2023/day24/src/helpers/: hailstone.rs  linesegment.rs  mod.rs
2023/day25/: Cargo.toml
2023/day25/src/: main.rs
2024/: Cargo.toml
2024/day00/: Cargo.toml
2024/day00/src/: main.rs
2024/day01/: Cargo.toml
2024/day01/src/: main.rs
2024/day02/: Cargo.toml
2024/day02/src/: main.rs
2024/day03/: Cargo.toml
2024/day03/src/: main.rs
2024/day04/: Cargo.toml
2024/day04/src/: main.rs
2024/day05/: Cargo.toml
2024/day05/src/: main.rs
2024/day06/: Cargo.toml
2024/day06/src/: main.rs
2024/day07/: Cargo.toml
2024/day07/src/: main.rs
2024/day08/: Cargo.toml
2024/day08/src/: antinodes_iterator.rs  main.rs
2024/day09/: Cargo.toml
2024/day09/src/: main.rs
2024/day10/: Cargo.toml
2024/day10/src/: main.rs
2024/day11/: Cargo.toml
2024/day11/src/: main.rs
2024/day12/: Cargo.toml
2024/day12/src/: main.rs
2024/day13/: Cargo.toml
2024/day13/src/: machine.rs  main.rs
2024/day14/: Cargo.toml
2024/day14/src/: main.rs
2024/day15/: Cargo.toml
2024/day15/src/: main.rs
2024/day15/src/components/: field.rs  mod.rs  move.rs  robot.rs  tile.rs  warehouse.rs
2024/day16/: Cargo.toml
2024/day16/src/: main.rs
2024/day16/src/components/: direction.rs  maze.rs  mod.rs  score.rs
2024/day17/: Cargo.toml
2024/day17/src/: deconstructed.rs  main.rs
2024/day17/src/components/: computer.rs  mod.rs  opcode.rs
2024/day18/: Cargo.toml
2024/day18/src/: main.rs
2024/day19/: Cargo.toml
2024/day19/src/: main.rs
2024/day20/: Cargo.toml
2024/day20/src/: main.rs
2024/day21/: Cargo.toml
2024/day21/src/: main.rs
2024/day22/: Cargo.toml
2024/day22/src/: main.rs
2024/day23/: Cargo.toml
2024/day23/src/: main.rs
2024/day24/: Cargo.toml
2024/day24/src/: main.rs
2024/day25/: Cargo.toml
2024/day25/src/: main.rs
2025/: Cargo.toml
2025/crates/day00/: Cargo.toml
2025/crates/day00/src/: main.rs
2025/crates/day01/: Cargo.toml
2025/crates/day01/src/: main.rs
2025/crates/day02/: Cargo.toml
2025/crates/day02/src/: main.rs
2025/crates/day03/: Cargo.toml
2025/crates/day03/src/: main.rs
2025/crates/day04/: Cargo.toml
2025/crates/day04/src/: main.rs
2025/crates/day05/: Cargo.toml
2025/crates/day05/src/: main.rs
2025/crates/day06/: Cargo.toml
2025/crates/day06/src/: main.rs
2025/crates/day07/: Cargo.toml
2025/crates/day07/src/: main.rs
2025/crates/day08/: Cargo.toml
2025/crates/day08/src/: main.rs
2025/crates/day09/: Cargo.toml
2025/crates/day09/src/: main.rs
2025/crates/day09/src/components/: direction.rs  field.rs  mod.rs  orientation.rs  oriented_point.rs  point.rs  vector.rs
2025/crates/day10/: Cargo.toml
2025/crates/day10/src/: main.rs
2025/crates/day10/src/components/: joltage_machine.rs  lights_machine.rs  mod.rs
2025/crates/day11/: Cargo.toml
2025/crates/day11/src/: main.rs
2025/crates/day12/: Cargo.toml
2025/crates/day12/src/: main.rs
(+42 files in other folders)
