[workspace]
resolver = "2"
members = [
    "day00",
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
    # "day13",
    # "day14",
    # "day15",
    # "day16",
    # "day17",
    # "day18",
    # "day19",
    # "day20",
    # "day21",
    # "day22",
    # "day23",
    # "day24",
    # "day25",
]

[workspace.dependencies]
bitflags = "2.4.1"
cached = "0.54.0"
fancy-regex = "0.14.0"
fxhash = "0.2.1"
indexmap = "2.7.0"
indicatif = "0.17.2"
itertools = "0.13.0"
nom = "7.1.1"
num = "0.4.0"
rand = "0.8.5"
rayon = "1.5.3"
rstest = "0.23.0"

[profile.release]
debug = true
