[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.100"
auto_enums = "0.8.7"
bitflags = "2.10.0"
cached = "0.56.0"
fancy-regex = "0.16.2"
indexmap = "2.12.1"
indicatif = { version = "0.18.3", features = ["rayon"] }
itertools = "0.14.0"
nom = "8.0.0"
num = "0.4.3"
partitions = "0.2.4"
rand = "0.9.2"
rayon = "1.11.0"
rstest = "0.26.1"
rustc-hash = "2.1.1"
z3 = { version = "0.19.6", features = ["gh-release"] }

[profile.release]
debug = true
