[package]
name = "day23"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
rstest = "0.15.0"

[dependencies]
anyhow = "1.0.66"
bitflags = "1.3.2"
chrono = "0.4.22"
clap = "4.0.22"
helpers = { path = "../helpers" }
indexmap = "1.9.1"
indicatif = "0.17.2"
itertools = "0.10.5"
nom = "7.1.1"
num = "0.4.0"
rand = "0.8.5"
rayon = "1.5.3"
regex = "1.7.0"
serde = "1.0.147"
thiserror = "1.0.37"
tracing = "0.1.37"
