[package]
name = "day11"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
rstest.workspace = true

[dependencies]
bitflags.workspace = true
fancy-regex.workspace = true
indexmap.workspace = true
indicatif.workspace = true
itertools.workspace = true
nom.workspace = true
num.workspace = true
rand.workspace = true
rayon.workspace = true
