[package]
name = "day01"
version = "0.0.0"
edition = "2021"

[dev-dependencies]
rstest.workspace = true

[dependencies]
anyhow.workspace = true
auto_enums.workspace = true
bitflags.workspace = true
cached.workspace = true
fancy-regex.workspace = true
indexmap.workspace = true
indicatif.workspace = true
itertools.workspace = true
nom.workspace = true
num.workspace = true
partitions.workspace = true
rand.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
